[gd_scene load_steps=2 format=3 uid="uid://c3jojjgaxm4f7"]

[ext_resource type="Script" path="res://src/testing/scene1.gd" id="1_l0esh"]

[node name="Scene1" type="Node2D"]
script = ExtResource("1_l0esh")

[node name="Button" type="Button" parent="."]
offset_left = 142.0
offset_top = 37.0
offset_right = 286.0
offset_bottom = 108.0
text = "to scene2"

[node name="Button2" type="Button" parent="."]
offset_left = 277.0
offset_top = 361.0
offset_right = 421.0
offset_bottom = 432.0
text = "fade out in"

[node name="Button3" type="Button" parent="."]
offset_left = 278.0
offset_top = 473.0
offset_right = 422.0
offset_bottom = 544.0
text = "no fade 2"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
